--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUdxKYKULWq1PYGuv-pQNa-NMW1l7P8NQ&libraries=places"></script>
+     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=HIDDEN&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
